# pytorchforaudio-bpd

./: .gitignore  README.md  main.py  pyproject.toml
01_mnist/: predict.py
02_urban_sounds/: load_data.py
urban_sounds/: cnn.py  constants.py  dataset.py  load_data.py  predict.py  preprocess.py  train.py  utils.py
urban_sounds/mnist_example/: train.py
