[project]
name = "pytorchforaudio-bpd"
version = "0.1.0"
description = "My code for Valerio Velardo's YouTube course 'PyTorch for Audio...'"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "soundfile>=0.13.1",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

# [build-system]
# requires = ["setuptools>=42"]
# build-backend = "setuptools.build_meta"

[tool.uv]
package = true
